--- a/index.html
+++ b/index.html
@@ -446,12 +446,20 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 						</div>
 						<div class="row">
 							<div class="scorpius-clients-slider text-center">
-								<div><img data-lazy="http://via.placeholder.com/200x100"></div>
-								<div><img data-lazy="http://via.placeholder.com/200x100"></div>
-								<div><img data-lazy="http://via.placeholder.com/200x100"></div>
-								<div><img data-lazy="http://via.placeholder.com/200x100"></div>
-								<div><img data-lazy="http://via.placeholder.com/200x100"></div>
-								<div><img data-lazy="http://via.placeholder.com/200x100"></div>
+								<div><img data-lazy="/images/partners/S2S-technologies.png"></div>
+								<div><img data-lazy="/images/partners/Logo-Instal-Group.png"></div>
+								<div><img data-lazy="/images/partners/logo-GoProMedia.png"></div>
+								<div><img data-lazy="/images/partners/logo-Lexus-Publicitate.png"></div>
+								<div><img data-lazy="/images/partners/logo-mobilier-vlas.jpg"></div>
+								<div><img data-lazy="/images/partners/logo-mobu.png"></div>
+								<div><img data-lazy="/images/partners/logo-GardenDream.png"></div>
+								<div><img data-lazy="/images/partners/logo-Masterton.png"></div>
+								<div><img data-lazy="/images/partners/logo-Hoinarii-Zarandului-min.gif"></div>
+								<div><img data-lazy="/images/partners/rainfall.jpg"></div>
+								<div><img data-lazy="/images/partners/logo-ELECTRIC-FARMER.jpg"></div>
+								<div><img data-lazy="/images/partners/logo-Enduro-Emy.jpg"></div>
+								<div><img data-lazy="/images/partners/pigrama_logo.png"></div>
+								<div><img data-lazy="/images/partners/logo-RIP-Automobile.jpg"></div>
 							</div>
 						</div>
 					</div>
