Added WOW animations

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 	<link rel="stylesheet" href="/css/superfish.css">
 	<!-- Easy Responsive Tabs -->
 	<link rel="stylesheet" href="/css/easy-responsive-tabs.css">
+	<!-- Animate js -->
+	<link rel="stylesheet" href="/css/animate.min.css">
 
 
 	<!-- Theme Style -->
@@ -141,8 +143,8 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 
 			<!-- Scroll to top button -->
 			<div id="phonePerm" title="Telephone">
-				<i class="ti-mobile"></i>
-				<span>0357 410 471</span>
+				<!-- <i class="ti-mobile"></i> -->
+				<span>+40 357 410 471</span>
 			</div>
 
 			<!-- START #scorpius-hero -->
@@ -174,9 +176,9 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center scorpius-lead-wrap">
-							<h2 class="scorpius-serif scorpius-lead">Scopul nostru este acela de a găsi soluţii menite să vă susţină ascensiunea în conformitate cu legislaţia în vigoare, oferind o gamă de servicii financiar contabile complete și nu numai.</h2>
+							<h2 class="scorpius-serif scorpius-lead wow fadeInUp" data-wow-delay="0.5s">Scopul nostru este acela de a găsi soluţii menite să vă susţină ascensiunea în conformitate cu legislaţia în vigoare, oferind o gamă de servicii financiar contabile complete și nu numai.</h2>
 							<div class="scorpius-spacer scorpius-spacer-sm"></div>
-							<p><a href="#scorpius-feature" class="btn btn-primary btn-lg smoothscroll btn-alt">Vezi ce servicii oferim</a></p>
+							<p><a href="#scorpius-feature" class="btn btn-primary btn-lg smoothscroll btn-alt wow rubberBand" data-wow-offset="250">Vezi ce servicii oferim</a></p>
 						</div>
 					</div>
 				</div>
@@ -184,12 +186,12 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 				<section id="scorpius-feature">
 					<div class="container">
 						<!-- FEATURE -->
-						<div class="row scorpius-feature-2">
+						<div class="row scorpius-feature-2 wow fadeIn" data-wow-offset="250">
 							<h1 class="scorpius-uppercase-heading-lg text-center">Servicii</h1>
 							<hr>
 							<div class="scorpius-spacer scorpius-spacer-md"></div>
 
-							<div class="col-md-4 col-sm-12 scorpius-feature-item">
+							<div class="col-md-4 col-sm-12 scorpius-feature-item wow fadeInLeft" data-wow-delay="0.5s">
 								<span class="scorpius-feature-icon scorpius-circle"><i class="ti-bar-chart"></i></span>
 								<h4 class="text-center scorpius-feature-title h4 text-uppercase">Sprijin pentru<br>start-up-uri</h4>
 								<h5 class="text-center scorpius-feature-subtitle">„Pornește la drum alături de un partener cu experiență”</h5>
@@ -199,7 +201,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 								<!-- <p class="text-center"><a href="#" class="btn btn-primary btn-sm">Citeste mai mult</a></p> -->
 							</div>
 
-							<div class="col-md-4 col-sm-12 scorpius-feature-item">
+							<div class="col-md-4 col-sm-12 scorpius-feature-item wow fadeInUp" data-wow-delay="0.75s">
 								<span class="scorpius-feature-icon scorpius-circle"><i class="ti-files"></i></span>
 								<h4 class="text-center scorpius-feature-title h4 text-uppercase">Consultanță<br>financiar-contabilă</h4>
 								<h5 class="text-center scorpius-feature-subtitle">„Tot ce ai nevoie pentru a ști că banii tăi sunt în siguranță”</h5>
@@ -209,7 +211,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 
 							<div class="clearfix visible-sm-block"></div>
 
-							<div class="col-md-4 col-sm-12 scorpius-feature-item">
+							<div class="col-md-4 col-sm-12 scorpius-feature-item wow fadeInRight" data-wow-delay="1s">
 								<span class="scorpius-feature-icon scorpius-circle"><i class="ti-money"></i></span>
 								<h4 class="text-center scorpius-feature-title h4 text-uppercase">Finanțări<br>nerambursabile</h4>
 								<h5 class="text-center scorpius-feature-subtitle">„Dezvoltarea afacerii are nevoie de finanțare...de ce nu nerambursabilă?”</h5>
@@ -228,7 +230,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 
 							<div class="col-md-8 col-md-offset-2 text-center">
 								<div class="scorpius-spacer scorpius-spacer-sm"></div>
-								<p><a href="#scorpius-team" class="btn btn-primary btn-lg smoothscroll">Cine face toate acestea?</a></p>
+								<p><a href="#scorpius-team" class="btn btn-primary btn-lg smoothscroll wow rubberBand" data-wow-offset="250">Cine face toate acestea?</a></p>
 							</div>
 
 							<!-- <div class="scorpius-spacer scorpius-spacer-md"></div> -->
@@ -282,14 +284,14 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 				<section id="scorpius-team">
 					<div class="container">
 						<div class="row scorpius-team">
-							<div class="col-md-12">
+							<div class="col-md-12 wow fadeIn" data-wow-offset="250">
 								<h2 class="scorpius-uppercase-heading-lg text-center">Echipa</h2>
 								<hr>
 								<div class="scorpius-spacer scorpius-spacer-sm"></div>
 							</div>
 
 							<div class="col-md-4 col-sm-6 col-md-offset-2">
-								<div class="scorpius-team-card">
+								<div class="scorpius-team-card wow fadeInUp" data-wow-offset="250" data-wow-delay="0.25s">
 									<div class="scorpius-team-card-image">
 										<img src="\images\team\Iulia-Stanciu-2.jpg" alt="">
 									</div>
@@ -306,7 +308,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 							</div>
 
 							<div class="col-md-4 col-sm-6">
-								<div class="scorpius-team-card">
+								<div class="scorpius-team-card wow fadeInUp" data-wow-offset="250" data-wow-delay="0.5s">
 									<div class="scorpius-team-card-image">
 										<img src="\images\team\Dana-Bugariu.jpeg" alt="">
 									</div>
@@ -325,7 +327,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 							<div class="clearfix visible-sm-block"></div>
 
 							<!-- <div class="col-md-4 col-sm-6">
-								<div class="scorpius-team-card">
+								<div class="scorpius-team-card wow fadeInUp" data-wow-offset="250" data-wow-delay="0.75s">
 									<div class="scorpius-team-card-image">
 										<img src="\images\team\team-placeholder-man.jpg" alt="">
 									</div>
@@ -342,7 +344,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 							</div>
 
 							<div class="col-md-4 col-sm-6">
-								<div class="scorpius-team-card">
+								<div class="scorpius-team-card wow fadeInUp" data-wow-offset="250" data-wow-delay="1s">
 									<div class="scorpius-team-card-image">
 										<img src="\images\team\team-placeholder-woman.jpg" alt="">
 									</div>
@@ -361,7 +363,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 							<div class="clearfix visible-sm-block"></div>
 
 							<div class="col-md-4 col-sm-6">
-								<div class="scorpius-team-card">
+								<div class="scorpius-team-card wow fadeInUp" data-wow-offset="250" data-wow-delay="1.25s">
 									<div class="scorpius-team-card-image">
 										<img src="\images\team\team-placeholder-man.jpg" alt="">
 									</div>
@@ -378,7 +380,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 							</div>
 
 							<div class="col-md-4 col-sm-6">
-								<div class="scorpius-team-card">
+								<div class="scorpius-team-card wow fadeInUp" data-wow-offset="250" data-wow-delay="1.5s">
 									<div class="scorpius-team-card-image">
 										<img src="\images\team\team-placeholder-man.jpg" alt="">
 									</div>
@@ -399,7 +401,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 
 							<div class="col-md-8 col-md-offset-2 text-center">
 								<div class="scorpius-spacer scorpius-spacer-sm"></div>
-								<p><a href="#scorpius-contact" class="btn btn-primary btn-lg btn-alt smoothscroll">Ia legătura cu noi</a></p>
+								<p><a href="#scorpius-contact" class="btn btn-primary btn-lg btn-alt smoothscroll wow rubberBand" data-wow-offset="250">Ia legătura cu noi</a></p>
 							</div>
 
 						</div>
@@ -438,13 +440,13 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 				<section id="scorpius-clients">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-md-12 wow fadeIn" data-wow-offset="250">
 								<h2 class="scorpius-uppercase-heading-lg text-center">Parteneri</h2>
 								<hr>
 								<div class="scorpius-spacer scorpius-spacer-sm"></div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row wow fadeIn" data-wow-offset="250">
 							<div class="scorpius-clients-slider text-center">
 								<div><img data-lazy="/images/partners/S2S-technologies.png"></div>
 								<div><img data-lazy="/images/partners/Logo-Instal-Group.png"></div>
@@ -469,7 +471,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 				<!-- START Google Maps -->
 				<section id="scorpius-map">
         	<div class="container-fluid">
-            <div class="row">
+            <div class="row wow fadeIn" data-wow-delay="0.25s">
                 <section id="cd-google-map">
                     <div id="google-container"></div>
                     <div id="cd-zoom-in"></div>
@@ -481,15 +483,63 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 				<!-- END Google Maps -->
 
 				<!-- START Contact -->
-				<section id="scorpius-contact">
+				<section id="scorpius-contact" class="text-center">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-12">
-								<h2 class="scorpius-uppercase-heading-lg text-center">Contact</h2>
+							<div class="col-md-12 wow fadeIn" data-wow-offset="250">
+								<h2 class="scorpius-uppercase-heading-lg">Contact</h2>
 								<hr>
 								<div class="scorpius-spacer scorpius-spacer-sm"></div>
 							</div>
-							<div class="col-md-8 col-md-offset-2">
+
+							<div class="col-md-10 col-md-offset-1">
+              <div class="col-md-4">
+                <div class="contact-item wow fadeInUp" data-wow-delay="0.25s">
+                  <i class="ti-location-pin"></i>
+                  <p>Str. Faurilor nr.37C - Arad, Romania</p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="contact-item wow fadeInUp" data-wow-delay="0.50s">
+                  <i class="ti-mobile"></i>
+                  <p>+40 357 410 471</p>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="contact-item wow fadeInUp" data-wow-delay="0.75s">
+                  <i class="ti-email"></i>
+                  <p>office@stanciuexpert.ro</p>
+                </div>
+              </div>
+              <div class="clearfix"></div>
+            </div>
+            <div class="col-md-10 col-md-offset-1">
+              <h3 class="wow zoomIn text-center" data-wow-delay="0.5s">Lasă-ne un mesaj</h3>
+              <form name="sentMessage" id="contactForm" novalidate class="wow fadeInUp" data-wow-delay="0.5s">
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <input type="text" id="name" class="form-control" placeholder="Name" required="required">
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+                      <p class="help-block text-danger"></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
+                  <p class="help-block text-danger"></p>
+                </div>
+                <div id="success"></div>
+                <button type="submit" class="btn btn-primary btn-lg btn-alt wow rubberBand" data-wow-offset="150">Send</button>
+              </form>
+            </div>
+
+							<!-- <div class="col-md-8 col-md-offset-2">
 								<form action="#" method="post">
 									<div class="col-md-6">
 										<div class="form-group">
@@ -507,7 +557,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 										<div class="form-group">
 											<label for="subject" class="sr-only">Subiect</label>
 											<select class="form-control input-lg" id="subject">
-											  <option>--Subiect--</option>
+											  <option>Subiect</option>
 											  <option>Fonduri europene</option>
 											  <option>Consultanță fiscală</option>
 											  <option>Contabilitate</option>
@@ -523,11 +573,11 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 									<div class="col-md-12 text-center">
 										<div class="form-group">
 											<input type="submit" class="btn btn-primary btn-lg btn-alt" value="Trimite">
-											<!-- <input type="reset" class="btn btn-outline btn-lg " value="Reset"> -->
 										</div>
 									</div>
 								</form>
-							</div>
+							</div> -->
+
 						</div>
 					</div>
 				</section>
@@ -536,10 +586,10 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 				<footer id="scorpius-footer">
 					<div class="container">
 
-						<ul class="scorpius-social-icons">
-							<li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-							<li><a href="#"><i class="ti-facebook"></i></a></li>
-							<li><a href="#"><i class="ti-linkedin"></i></a></li>
+						<ul class="scorpius-social-icons" >
+							<li class="wow bounce" data-wow-delay="0.30s"><a href="#"><i class="ti-twitter-alt"></i></a></li>
+							<li class="wow bounce" data-wow-delay="0.15s"><a href="#"><i class="ti-facebook"></i></a></li>
+							<li class="wow bounce" data-wow-delay="0.45s"><a href="#"><i class="ti-linkedin"></i></a></li>
 						</ul>
 						<p class="scorpius-no-margin-bottom text-center"><small>&copy; 2017 Stanciu Expert. All rights reserved.
 						<br>
@@ -575,6 +625,23 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 		<script src="/js/main.js"></script>
 		<!-- Custom JS -->
 		<script src="/js/custom.js"></script>
+		<!-- WOW effects -->
+		<script src="/js/wow.min.js"></script>
+
+		<script type="text/javascript">
+			// start scorpius-loader
+			$(document).ready(function() {
+				setTimeout(function(){
+					$('body').addClass('loaded');
+					// $('h1').css('color','#222222');
+				}, 500);
+			});
+		</script>
+
+		<script type="text/javascript">
+			//init WOW effects
+			new WOW().init();
+		</script>
 
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-MirZ17KO34PNO1DG0iBQqfCcAwQuXPY"></script>
 
