added links to all partners

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 								</ul> -->
 							</li>
 							<li><a class="smoothscroll" href="#scorpius-team">Echipa</a></li>
-							<li><a class="smoothscroll" href="#scorpius-clients">Clienți</a></li>
+							<li><a class="smoothscroll" href="#scorpius-clients">Parteneri</a></li>
 							<li><a class="smoothscroll" href="#scorpius-contact">Contact</a></li>
 							<li class="dropdown">
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
@@ -356,24 +356,96 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 						</div>
 						<div class="row wow fadeIn" data-wow-offset="200">
 							<div class="scorpius-clients-slider text-center">
-								<div><img data-lazy="/images/partners/logo-S2S-technologies.png"></div>
-								<div><img data-lazy="/images/partners/logo-Instal-Group.png"></div>
-								<div><img data-lazy="/images/partners/logo-GoProMedia.png"></div>
-								<div><img data-lazy="/images/partners/logo-Lexus-Publicitate.png"></div>
-								<div><img data-lazy="/images/partners/logo-mobilier-vlas.jpg"></div>
-								<div><img data-lazy="/images/partners/logo-mobu.png"></div>
-								<div><img data-lazy="/images/partners/logo-CECAR.png"></div>
-								<div><img data-lazy="/images/partners/logo-CNIPMMR.png"></div>
-								<div><img data-lazy="/images/partners/logo-CCIA-Arad.png"></div>
-								<div><img data-lazy="/images/partners/logo-GardenDream.png"></div>
-								<div><img data-lazy="/images/partners/logo-DRW.png"></div>
-								<div><img data-lazy="/images/partners/logo-Masterton.png"></div>
-								<div><img data-lazy="/images/partners/logo-Hoinarii-Zarandului-min.gif"></div>
-								<div><img data-lazy="/images/partners/logo-rainfall.jpg"></div>
-								<div><img data-lazy="/images/partners/logo-ELECTRIC-FARMER.jpg"></div>
-								<div><img data-lazy="/images/partners/logo-Enduro-Emy.jpg"></div>
-								<div><img data-lazy="/images/partners/logo-pigrama.png"></div>
-								<div><img data-lazy="/images/partners/logo-RIP-Automobile.jpg"></div>
+								<div>
+									<a href="https://s2s.ro" target="_blank">
+										<img data-lazy="/images/partners/logo-S2S-technologies.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.instalgroup.ro" target="_blank">
+										<img data-lazy="/images/partners/logo-Instal-Group.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://gopromedia.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-GoProMedia.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://promotionale.lexuspublicitate.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-Lexus-Publicitate.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.mobiliervlas.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-mobilier-vlas.png">
+									</a>
+								</div>
+								<div>
+									<a href="https://www.facebook.com/MobuFactory/" target="_blank">
+										<img data-lazy="/images/partners/logo-mobu.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://ceccararad.ro/site/" target="_blank">
+										<img data-lazy="/images/partners/logo-CECAR.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://cnipmmr.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-CNIPMMR.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.ccia-arad.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-CCIA-Arad.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.gardendream.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-GardenDream.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://drw.ro" target="_blank">
+										<img data-lazy="/images/partners/logo-DRW.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.masterton-art.com/" target="_blank">
+										<img data-lazy="/images/partners/logo-Masterton.png">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.hoinariizarandului.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-Hoinarii-Zarandului-min.gif">
+									</a>
+								</div>
+								<div>
+									<a href="https://www.rainfall.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-rainfall.jpg">
+									</a>
+								</div>
+								<div>
+									<a href="http://electricfarmer.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-ELECTRIC-FARMER.jpg">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.enduro.emy.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-Enduro-Emy.jpg">
+									</a>
+								</div>
+								<div>
+									<a href="http://www.pigrama.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-pigrama.png">
+									</a>
+								</div>
+								<div>
+									<a href="https://ripautomobile.autovit.ro/" target="_blank">
+										<img data-lazy="/images/partners/logo-RIP-Automobile.jpg">
+									</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -503,7 +575,7 @@ DESIGNED & DEVELOPED by SCORPIUSWORKS.COM
 							<li class="wow bounce" data-wow-delay="0.15s"><a href="#"><i class="ti-facebook"></i></a></li>
 							<li class="wow bounce" data-wow-delay="0.45s"><a href="#"><i class="ti-linkedin"></i></a></li>
 						</ul>
-						<p class="scorpius-no-margin-bottom text-center"><small>&copy; 2017 Stanciu Expert. All rights reserved.
+						<p class="scorpius-no-margin-bottom text-center"><small>&copy; 2018 Stanciu Expert. All rights reserved.
 						<br>
 						<em>Crafted with love by <a href="https://scorpiusworks.com" target="_blank">Scorpius Works</a></em></small></p>
 
